# cog_works

./: .gitignore  .secrets.baseline  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  deny.toml
.beads/: README.md
.cargo/: audit.toml
.githooks/: post-merge  pre-commit
.github/workflows/: ci.yml  claude-pr-review.yml  lint.yml  quality.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/extension-api/: Cargo.toml
crates/extension-api/src/: lib.rs
crates/github/: Cargo.toml
crates/github/src/: lib.rs
crates/listener/: Cargo.toml
crates/listener/src/: lib.rs
crates/llm/: Cargo.toml
crates/llm/src/: lib.rs
crates/nodes/: Cargo.toml
crates/nodes/src/: lib.rs
crates/pipeline/: Cargo.toml
crates/pipeline/src/: audit.rs  errors.rs  github.rs  graph.rs  identifiers.rs  lib.rs  templates.rs  types.rs
docs/adr/: ADR-0001-dynamic-capability-discovery-via-handshake.md  ADR-0002-context-pack-system.md  ADR-0003-constitutional-security-layer.md  ADR-0004-graph-structured-pipeline.md  ADR-0005-tool-profile-system.md
docs/spec/: README.md  architecture.md  assertions.md  constraints.md  edge-cases.md  operations.md  overview.md  requirements.md  responsibilities.md  risk-register.md  security.md  shared-registry.md  testing.md  tradeoffs.md  vocabulary.md
docs/spec/interfaces/: README.md  github-traits.md  pipeline-graph.md  shared-types.md
docs/standards/: iso9001-traceability.md  rust-embedded-safety.md
