[package]
name = "listener"
description = "CogWorks event source infrastructure: GitHub webhook receiver and cloud queue consumer (Azure Service Bus / AWS SQS)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
pipeline = { workspace = true }
github-bot-sdk = { workspace = true }
queue-runtime = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
